--- a/Bai1/PHIEUCHAM.ipynb
+++ b/Bai1/PHIEUCHAM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "20ccdf87",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     STT                                            Câu Hỏi  \\\n",
-      "0      1  Which country has won the most Olympic swimmin...   \n",
-      "1      2  Name three countries with the most swimmers pa...   \n",
-      "2      3  Compare the Olympic swimming performances of t...   \n",
-      "3      4  Which country has won the most Olympic gold me...   \n",
-      "4      5  Which country has the most Paralympic swimming...   \n",
-      "..   ...                                                ...   \n",
-      "550  551  How is the Elo rating calculated after each game?   \n",
-      "551  552  What are the challenges of the Elo rating syst...   \n",
-      "552  553  How do online chess platforms adapt the Elo sy...   \n",
-      "553  554  Can a player's Elo rating plateau, and how can...   \n",
-      "554  555  How does the Elo system compare to other ratin...   \n",
-      "\n",
-      "                                          Dịch Câu Hỏi  \\\n",
-      "0    Nước nào có nhiều huy chương bơi lội Olympic n...   \n",
-      "1    Kể tên 3 quốc gia có số lượng vận động viên bơ...   \n",
-      "2    So sánh thành tích bơi lội Olympic của Hoa Kỳ ...   \n",
-      "3    Nước nào có số lượng huy chương vàng bơi lội O...   \n",
-      "4    Nước nào có nhiều huy chương bơi lội Paralympi...   \n",
+      "                                     Câu hỏi tiếng Anh  \\\n",
+      "0    Which country has won the most Olympic swimmin...   \n",
+      "1    Name three countries with the most swimmers pa...   \n",
+      "2    Compare the Olympic swimming performances of t...   \n",
+      "3    Which country has won the most Olympic gold me...   \n",
+      "4    Which country has the most Paralympic swimming...   \n",
       "..                                                 ...   \n",
-      "550  Xếp hạng Elo được tính như thế nào sau mỗi ván...   \n",
-      "551  Những thách thức của hệ thống xếp hạng Elo tro...   \n",
-      "552  Các nền tảng cờ vua trực tuyến điều chỉnh hệ t...   \n",
-      "553  Liệu xếp hạng Elo của người chơi có ổn định kh...   \n",
-      "554  Hệ thống Elo so sánh với các hệ thống xếp hạng...   \n",
+      "550  How is the Elo rating calculated after each game?   \n",
+      "551  What are the challenges of the Elo rating syst...   \n",
+      "552  How do online chess platforms adapt the Elo sy...   \n",
+      "553  Can a player's Elo rating plateau, and how can...   \n",
+      "554  How does the Elo system compare to other ratin...   \n",
       "\n",
-      "                                               Trả Lời  \\\n",
+      "                                    Câu hỏi tiếng Việt        Đánh giá  \\\n",
+      "0    Nước nào có nhiều huy chương bơi lội Olympic n...  Tín -Đạt - Nhã   \n",
+      "1    Kể tên 3 quốc gia có số lượng vận động viên bơ...  Tín -Đạt - Nhã   \n",
+      "2    So sánh thành tích bơi lội Olympic của Hoa Kỳ ...  Tín -Đạt - Nhã   \n",
+      "3    Nước nào có số lượng huy chương vàng bơi lội O...  Tín -Đạt - Nhã   \n",
+      "4    Nước nào có nhiều huy chương bơi lội Paralympi...  Tín -Đạt - Nhã   \n",
+      "..                                                 ...             ...   \n",
+      "550  Xếp hạng Elo được tính như thế nào sau mỗi ván...  Tín -Đạt - Nhã   \n",
+      "551  Những thách thức của hệ thống xếp hạng Elo tro...  Tín -Đạt - Nhã   \n",
+      "552  Các nền tảng cờ vua trực tuyến điều chỉnh hệ t...  Tín -Đạt - Nhã   \n",
+      "553  Liệu xếp hạng Elo của người chơi có ổn định kh...  Tín -Đạt - Nhã   \n",
+      "554  Hệ thống Elo so sánh với các hệ thống xếp hạng...  Tín -Đạt - Nhã   \n",
+      "\n",
+      "                                 Câu trả lời tiếng Anh  \\\n",
       "0                                        United States   \n",
       "1    United States (1,617 athletes) 2. Australia (1...   \n",
       "2    United States: Over the past 10 years (from 20...   \n",
@@ -49,20 +49,20 @@
       "553  By seeking higher-rated opponents and focusing...   \n",
       "554  It's a widely accepted system, but other syste...   \n",
       "\n",
-      "                                      Dịch Câu Trả lời  \n",
-      "0                            Hoa Kỳ (1151 huy chương).  \n",
-      "1    1. Hoa Kỳ (1.617 vận động viên) 2. Úc (1.158 v...  \n",
-      "2           Hoa Kỳ:Trong 10 năm qua (từ 2012 đến 2020)  \n",
-      "3    Nước có số lượng huy chương vàng bơi lội Olymp...  \n",
-      "4    Nước có nhiều huy chương bơi lội Paralympic nh...  \n",
-      "..                                                 ...  \n",
-      "550  Dựa trên kết quả trận đấu và sự khác biệt về x...  \n",
-      "551  Xếp hạng có thể trì trệ và sự không phù hợp về...  \n",
-      "552  Bằng cách điều chỉnh thuật toán xếp hạng và kế...  \n",
-      "553  Bằng cách tìm kiếm những đối thủ được đánh giá...  \n",
-      "554  Đó là một hệ thống được chấp nhận rộng rãi, nh...  \n",
+      "                                Câu trả lời tiếng Việt      Đánh giá.1  \n",
+      "0                                              Hoa Kỳ   Tín -Đạt - Nhã  \n",
+      "1    1. Hoa Kỳ (1.617 vận động viên) 2. Úc (1.158 v...  Tín -Đạt - Nhã  \n",
+      "2           Hoa Kỳ:Trong 10 năm qua (từ 2012 đến 2020)  Tín -Đạt - Nhã  \n",
+      "3    Nước có số lượng huy chương vàng bơi lội Olymp...  Tín -Đạt - Nhã  \n",
+      "4    Nước có nhiều huy chương bơi lội Paralympic nh...  Tín -Đạt - Nhã  \n",
+      "..                                                 ...             ...  \n",
+      "550  Dựa trên kết quả trận đấu và sự khác biệt về x...  Tín -Đạt - Nhã  \n",
+      "551  Xếp hạng có thể trì trệ và sự không phù hợp về...  Tín -Đạt - Nhã  \n",
+      "552  Bằng cách điều chỉnh thuật toán xếp hạng và kế...  Tín -Đạt - Nhã  \n",
+      "553  Bằng cách tìm kiếm những đối thủ được đánh giá...  Tín -Đạt - Nhã  \n",
+      "554  Đó là một hệ thống được chấp nhận rộng rãi, nh...  Tín -Đạt - Nhã  \n",
       "\n",
-      "[555 rows x 5 columns]\n"
+      "[555 rows x 6 columns]\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e9d84907",
    "metadata": {},
    "outputs": [
@@ -99,11 +99,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>STT</th>\n",
-       "      <th>Câu Hỏi</th>\n",
-       "      <th>Dịch Câu Hỏi</th>\n",
-       "      <th>Trả Lời</th>\n",
-       "      <th>Dịch Câu Trả lời</th>\n",
+       "      <th>Câu hỏi tiếng Anh</th>\n",
+       "      <th>Câu hỏi tiếng Việt</th>\n",
+       "      <th>Câu trả lời tiếng Anh</th>\n",
+       "      <th>Câu trả lời tiếng Việt</th>\n",
        "      <th>Đánh giá độ chính xác</th>\n",
        "      <th>Đánh giá đầy đủ và chi tiết</th>\n",
        "      <th>Đánh giá dịch</th>\n",
@@ -112,18 +111,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>Which country has won the most Olympic swimmin...</td>\n",
        "      <td>Nước nào có nhiều huy chương bơi lội Olympic n...</td>\n",
        "      <td>United States</td>\n",
-       "      <td>Hoa Kỳ (1151 huy chương).</td>\n",
+       "      <td>Hoa Kỳ</td>\n",
        "      <td>Cần đánh giá</td>\n",
        "      <td>Cần đánh giá</td>\n",
        "      <td>Cần đánh giá</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>Name three countries with the most swimmers pa...</td>\n",
        "      <td>Kể tên 3 quốc gia có số lượng vận động viên bơ...</td>\n",
        "      <td>United States (1,617 athletes) 2. Australia (1...</td>\n",
@@ -134,7 +131,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>Compare the Olympic swimming performances of t...</td>\n",
        "      <td>So sánh thành tích bơi lội Olympic của Hoa Kỳ ...</td>\n",
        "      <td>United States: Over the past 10 years (from 20...</td>\n",
@@ -145,7 +141,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>Which country has won the most Olympic gold me...</td>\n",
        "      <td>Nước nào có số lượng huy chương vàng bơi lội O...</td>\n",
        "      <td>The country with the most Olympic gold medals ...</td>\n",
@@ -156,7 +151,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>Which country has the most Paralympic swimming...</td>\n",
        "      <td>Nước nào có nhiều huy chương bơi lội Paralympi...</td>\n",
        "      <td>The country with the most Paralympic swimming ...</td>\n",
@@ -174,11 +168,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>550</th>\n",
-       "      <td>551</td>\n",
        "      <td>How is the Elo rating calculated after each game?</td>\n",
        "      <td>Xếp hạng Elo được tính như thế nào sau mỗi ván...</td>\n",
        "      <td>Based on the outcome of the game and the diffe...</td>\n",
@@ -189,7 +181,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>551</th>\n",
-       "      <td>552</td>\n",
        "      <td>What are the challenges of the Elo rating syst...</td>\n",
        "      <td>Những thách thức của hệ thống xếp hạng Elo tro...</td>\n",
        "      <td>Ratings can stagnate, and mismatches in player...</td>\n",
@@ -200,7 +191,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>552</th>\n",
-       "      <td>553</td>\n",
        "      <td>How do online chess platforms adapt the Elo sy...</td>\n",
        "      <td>Các nền tảng cờ vua trực tuyến điều chỉnh hệ t...</td>\n",
        "      <td>By adjusting the rating algorithm and incorpor...</td>\n",
@@ -211,7 +201,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>553</th>\n",
-       "      <td>554</td>\n",
        "      <td>Can a player's Elo rating plateau, and how can...</td>\n",
        "      <td>Liệu xếp hạng Elo của người chơi có ổn định kh...</td>\n",
        "      <td>By seeking higher-rated opponents and focusing...</td>\n",
@@ -222,7 +211,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>554</th>\n",
-       "      <td>555</td>\n",
        "      <td>How does the Elo system compare to other ratin...</td>\n",
        "      <td>Hệ thống Elo so sánh với các hệ thống xếp hạng...</td>\n",
        "      <td>It's a widely accepted system, but other syste...</td>\n",
@@ -233,24 +221,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>555 rows × 8 columns</p>\n",
+       "<p>555 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     STT                                            Câu Hỏi  \\\n",
-       "0      1  Which country has won the most Olympic swimmin...   \n",
-       "1      2  Name three countries with the most swimmers pa...   \n",
-       "2      3  Compare the Olympic swimming performances of t...   \n",
-       "3      4  Which country has won the most Olympic gold me...   \n",
-       "4      5  Which country has the most Paralympic swimming...   \n",
-       "..   ...                                                ...   \n",
-       "550  551  How is the Elo rating calculated after each game?   \n",
-       "551  552  What are the challenges of the Elo rating syst...   \n",
-       "552  553  How do online chess platforms adapt the Elo sy...   \n",
-       "553  554  Can a player's Elo rating plateau, and how can...   \n",
-       "554  555  How does the Elo system compare to other ratin...   \n",
+       "                                     Câu hỏi tiếng Anh  \\\n",
+       "0    Which country has won the most Olympic swimmin...   \n",
+       "1    Name three countries with the most swimmers pa...   \n",
+       "2    Compare the Olympic swimming performances of t...   \n",
+       "3    Which country has won the most Olympic gold me...   \n",
+       "4    Which country has the most Paralympic swimming...   \n",
+       "..                                                 ...   \n",
+       "550  How is the Elo rating calculated after each game?   \n",
+       "551  What are the challenges of the Elo rating syst...   \n",
+       "552  How do online chess platforms adapt the Elo sy...   \n",
+       "553  Can a player's Elo rating plateau, and how can...   \n",
+       "554  How does the Elo system compare to other ratin...   \n",
        "\n",
-       "                                          Dịch Câu Hỏi  \\\n",
+       "                                    Câu hỏi tiếng Việt  \\\n",
        "0    Nước nào có nhiều huy chương bơi lội Olympic n...   \n",
        "1    Kể tên 3 quốc gia có số lượng vận động viên bơ...   \n",
        "2    So sánh thành tích bơi lội Olympic của Hoa Kỳ ...   \n",
@@ -263,7 +251,7 @@
        "553  Liệu xếp hạng Elo của người chơi có ổn định kh...   \n",
        "554  Hệ thống Elo so sánh với các hệ thống xếp hạng...   \n",
        "\n",
-       "                                               Trả Lời  \\\n",
+       "                                 Câu trả lời tiếng Anh  \\\n",
        "0                                        United States   \n",
        "1    United States (1,617 athletes) 2. Australia (1...   \n",
        "2    United States: Over the past 10 years (from 20...   \n",
@@ -276,8 +264,8 @@
        "553  By seeking higher-rated opponents and focusing...   \n",
        "554  It's a widely accepted system, but other syste...   \n",
        "\n",
-       "                                      Dịch Câu Trả lời Đánh giá độ chính xác  \\\n",
-       "0                            Hoa Kỳ (1151 huy chương).          Cần đánh giá   \n",
+       "                                Câu trả lời tiếng Việt Đánh giá độ chính xác  \\\n",
+       "0                                              Hoa Kỳ           Cần đánh giá   \n",
        "1    1. Hoa Kỳ (1.617 vận động viên) 2. Úc (1.158 v...          Cần đánh giá   \n",
        "2           Hoa Kỳ:Trong 10 năm qua (từ 2012 đến 2020)          Cần đánh giá   \n",
        "3    Nước có số lượng huy chương vàng bơi lội Olymp...          Cần đánh giá   \n",
@@ -302,17 +290,17 @@
        "553                Cần đánh giá  Cần đánh giá  \n",
        "554                Cần đánh giá  Cần đánh giá  \n",
        "\n",
-       "[555 rows x 8 columns]"
+       "[555 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create an assessment sheet format\n",
-    "assessment_columns = ['STT', 'Câu Hỏi', 'Dịch Câu Hỏi', 'Trả Lời', 'Dịch Câu Trả lời', \n",
+    "assessment_columns = ['Câu hỏi tiếng Anh', 'Câu hỏi tiếng Việt', 'Câu trả lời tiếng Anh', 'Câu trả lời tiếng Việt', \n",
     "                      'Đánh giá độ chính xác', 'Đánh giá đầy đủ và chi tiết', 'Đánh giá dịch']\n",
     "\n",
     "# Fill the new columns with placeholder text for assessments\n",
