--- a/Bai3/CODE_BAI3.ipynb
+++ b/Bai3/CODE_BAI3.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "58e422f5",
    "metadata": {},
    "outputs": [
@@ -1054,6 +1054,204 @@
     "- Ngày tháng năm sinh: Có thể tạo ra các đặc trưng mới như “Tháng sinh”, “Ngày sinh” và “Năm sinh”. Ngoài ra, có thể tính toán “Tuổi” dựa trên “Năm sinh” nếu dữ liệu được cập nhật liên tục.\n",
     "- Câu nói nổi tiếng của tác giả: Có thể sử dụng các phương pháp xử lý ngôn ngữ tự nhiên (NLP) để trích xuất đặc trưng từ văn bản. Ví dụ, TF-IDF (Term Frequency-Inverse Document Frequency) để đánh giá tầm quan trọng của một từ trong câu nói hoặc Word2Vec để biểu diễn từ dưới dạng vectơ số.\n",
     "- Tuổi: Đây là một đặc trưng số và có thể được sử dụng trực tiếp trong mô hình học máy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c6ea28d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Câu nói: “The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”\n",
+      "Số lượng từ: 21\n",
+      "Từ khóa: thinking\n",
+      "\n",
+      "Câu nói: “It is our choices, Harry, that show what we truly are, far more than our abilities.”\n",
+      "Số lượng từ: 16\n",
+      "Từ khóa: our\n",
+      "\n",
+      "Câu nói: “There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.”\n",
+      "Số lượng từ: 26\n",
+      "Từ khóa: miracle\n",
+      "\n",
+      "Câu nói: “The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”\n",
+      "Số lượng từ: 19\n",
+      "Từ khóa: be\n",
+      "\n",
+      "Câu nói: “Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.”\n",
+      "Số lượng từ: 16\n",
+      "Từ khóa: absolutely\n",
+      "\n",
+      "Câu nói: “Try not to become a man of success. Rather become a man of value.”\n",
+      "Số lượng từ: 14\n",
+      "Từ khóa: become\n",
+      "\n",
+      "Câu nói: “It is better to be hated for what you are than to be loved for what you are not.”\n",
+      "Số lượng từ: 19\n",
+      "Từ khóa: for\n",
+      "\n",
+      "Câu nói: “I have not failed. I've just found 10,000 ways that won't work.”\n",
+      "Số lượng từ: 12\n",
+      "Từ khóa: 000\n",
+      "\n",
+      "Câu nói: “A woman is like a tea bag; you never know how strong it is until it's in hot water.”\n",
+      "Số lượng từ: 19\n",
+      "Từ khóa: bag\n",
+      "\n",
+      "Câu nói: “A day without sunshine is like, you know, night.”\n",
+      "Số lượng từ: 9\n",
+      "Từ khóa: night\n",
+      "\n",
+      "Câu nói: “This life is what you make it. No matter what, you're going to mess up sometimes, it's a universal truth. But the good part is you get to decide how you're going to mess it up. Girls will be your friends - they'll act like it anyway. But just remember, some come, some go. The ones that stay with you through everything - they're your true best friends. Don't let go of them. Also remember, sisters make the best friends in the world. As for lovers, well, they'll come and go too. And baby, I hate to say it, most of them - actually pretty much all of them are going to break your heart, but you can't give up because if you give up, you'll never find your soulmate. You'll never find that half who makes you whole and that goes for everything. Just because you fail once, doesn't mean you're gonna fail at everything. Keep trying, hold on, and always, always, always believe in yourself, because if you don't, then who will, sweetie? So keep your head high, keep your chin up, and most importantly, keep smiling, because life's a beautiful thing and there's so much to smile about.”\n",
+      "Số lượng từ: 201\n",
+      "Từ khóa: you\n",
+      "\n",
+      "Câu nói: “It takes a great deal of bravery to stand up to our enemies, but just as much to stand up to our friends.”\n",
+      "Số lượng từ: 23\n",
+      "Từ khóa: stand\n",
+      "\n",
+      "Câu nói: “If you can't explain it to a six year old, you don't understand it yourself.”\n",
+      "Số lượng từ: 15\n",
+      "Từ khóa: explain\n",
+      "\n",
+      "Câu nói: “You may not be her first, her last, or her only. She loved before she may love again. But if she loves you now, what else matters? She's not perfect—you aren't either, and the two of you may never be perfect together but if she can make you laugh, cause you to think twice, and admit to being human and making mistakes, hold onto her and give her the most you can. She may not be thinking about you every second of the day, but she will give you a part of her that she knows you can break—her heart. So don't hurt her, don't change her, don't analyze and don't expect more than she can give. Smile when she makes you happy, let her know when she makes you mad, and miss her when she's not there.”\n",
+      "Số lượng từ: 138\n",
+      "Từ khóa: she\n",
+      "\n",
+      "Câu nói: “I like nonsense, it wakes up the brain cells. Fantasy is a necessary ingredient in living.”\n",
+      "Số lượng từ: 16\n",
+      "Từ khóa: brain\n",
+      "\n",
+      "Câu nói: “I may not have gone where I intended to go, but I think I have ended up where I needed to be.”\n",
+      "Số lượng từ: 22\n",
+      "Từ khóa: where\n",
+      "\n",
+      "Câu nói: “The opposite of love is not hate, it's indifference. The opposite of art is not ugliness, it's indifference. The opposite of faith is not heresy, it's indifference. And the opposite of life is not death, it's indifference.”\n",
+      "Số lượng từ: 37\n",
+      "Từ khóa: indifference\n",
+      "\n",
+      "Câu nói: “It is not a lack of love, but a lack of friendship that makes unhappy marriages.”\n",
+      "Số lượng từ: 16\n",
+      "Từ khóa: lack\n",
+      "\n",
+      "Câu nói: “Good friends, good books, and a sleepy conscience: this is the ideal life.”\n",
+      "Số lượng từ: 13\n",
+      "Từ khóa: good\n",
+      "\n",
+      "Câu nói: “Life is what happens to us while we are making other plans.”\n",
+      "Số lượng từ: 12\n",
+      "Từ khóa: happens\n",
+      "\n",
+      "Câu nói: “I love you without knowing how, or when, or from where. I love you simply, without problems or pride: I love you in this way because I do not know any other way of loving but this, in which there is no I or you, so intimate that your hand upon my chest is my hand, so intimate that when I fall asleep your eyes close.”\n",
+      "Số lượng từ: 66\n",
+      "Từ khóa: or\n",
+      "\n",
+      "Câu nói: “For every minute you are angry you lose sixty seconds of happiness.”\n",
+      "Số lượng từ: 12\n",
+      "Từ khóa: angry\n",
+      "\n",
+      "Câu nói: “If you judge people, you have no time to love them.”\n",
+      "Số lượng từ: 11\n",
+      "Từ khóa: judge\n",
+      "\n",
+      "Câu nói: “Anyone who thinks sitting in church can make you a Christian must also think that sitting in a garage can make you a car.”\n",
+      "Số lượng từ: 24\n",
+      "Từ khóa: sitting\n",
+      "\n",
+      "Câu nói: “Beauty is in the eye of the beholder and it may be necessary from time to time to give a stupid or misinformed beholder a black eye.”\n",
+      "Số lượng từ: 27\n",
+      "Từ khóa: beholder\n",
+      "\n",
+      "Câu nói: “Today you are You, that is truer than true. There is no one alive who is Youer than You.”\n",
+      "Số lượng từ: 19\n",
+      "Từ khóa: than\n",
+      "\n",
+      "Câu nói: “If you want your children to be intelligent, read them fairy tales. If you want them to be more intelligent, read them more fairy tales.”\n",
+      "Số lượng từ: 25\n",
+      "Từ khóa: them\n",
+      "\n",
+      "Câu nói: “It is impossible to live without failing at something, unless you live so cautiously that you might as well not have lived at all - in which case, you fail by default.”\n",
+      "Số lượng từ: 32\n",
+      "Từ khóa: at\n",
+      "\n",
+      "Câu nói: “Logic will get you from A to Z; imagination will get you everywhere.”\n",
+      "Số lượng từ: 13\n",
+      "Từ khóa: get\n",
+      "\n",
+      "Câu nói: “One good thing about music, when it hits you, you feel no pain.”\n",
+      "Số lượng từ: 13\n",
+      "Từ khóa: feel\n",
+      "\n",
+      "Câu nói: “The more that you read, the more things you will know. The more that you learn, the more places you'll go.”\n",
+      "Số lượng từ: 21\n",
+      "Từ khóa: more\n",
+      "\n",
+      "Câu nói: “Of course it is happening inside your head, Harry, but why on earth should that mean that it is not real?”\n",
+      "Số lượng từ: 21\n",
+      "Từ khóa: that\n",
+      "\n",
+      "Câu nói: “The truth is, everyone is going to hurt you. You just got to find the ones worth suffering for.”\n",
+      "Số lượng từ: 19\n",
+      "Từ khóa: the\n",
+      "\n",
+      "Câu nói: “Not all of us can do great things. But we can do small things with great love.”\n",
+      "Số lượng từ: 17\n",
+      "Từ khóa: do\n",
+      "\n",
+      "Câu nói: “To the well-organized mind, death is but the next great adventure.”\n",
+      "Số lượng từ: 11\n",
+      "Từ khóa: the\n",
+      "\n",
+      "Câu nói: “All you need is love. But a little chocolate now and then doesn't hurt.”\n",
+      "Số lượng từ: 14\n",
+      "Từ khóa: chocolate\n",
+      "\n",
+      "Câu nói: “We read to know we're not alone.”\n",
+      "Số lượng từ: 7\n",
+      "Từ khóa: we\n",
+      "\n",
+      "Câu nói: “Any fool can know. The point is to understand.”\n",
+      "Số lượng từ: 9\n",
+      "Từ khóa: fool\n",
+      "\n",
+      "Câu nói: “I have always imagined that Paradise will be a kind of library.”\n",
+      "Số lượng từ: 12\n",
+      "Từ khóa: imagined\n",
+      "\n",
+      "Câu nói: “It is never too late to be what you might have been.”\n",
+      "Số lượng từ: 12\n",
+      "Từ khóa: been\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Đọc dữ liệu từ file CSV\n",
+    "with open('Quote.csv', 'r', encoding='utf-8') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    next(reader)  # Bỏ qua hàng tiêu đề\n",
+    "    data = list(reader)\n",
+    "\n",
+    "# Trích xuất số lượng từ trong mỗi câu nói\n",
+    "quote_lengths = [len(quote.split()) for _, _, _, _, quote, _ in data]\n",
+    "\n",
+    "# Trích xuất từ khóa sử dụng TF-IDF\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "tfidf_matrix = vectorizer.fit_transform([quote for _, _, _, _, quote, _ in data])\n",
+    "tfidf_feature_names = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# In ra số lượng từ và từ khóa cho mỗi câu nói\n",
+    "for i, quote in enumerate(data):\n",
+    "    print(f\"Câu nói: {quote[4]}\")\n",
+    "    print(f\"Số lượng từ: {quote_lengths[i]}\")\n",
+    "    print(f\"Từ khóa: {tfidf_feature_names[tfidf_matrix[i].argmax()]}\\n\")\n"
    ]
   }
  ],
