--- a/Bai3/CODE_BAI3.ipynb
+++ b/Bai3/CODE_BAI3.ipynb
@@ -1253,6 +1253,365 @@
     "    print(f\"Số lượng từ: {quote_lengths[i]}\")\n",
     "    print(f\"Từ khóa: {tfidf_feature_names[tfidf_matrix[i].argmax()]}\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1d47d9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: J.K. Rowling\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Jane Austen\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+      "---\n",
+      "Tác giả: Marilyn Monroe\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: André Gide\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Thomas A. Edison\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Eleanor Roosevelt\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Steve Martin\n",
+      "Vector BoW: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Marilyn Monroe\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: J.K. Rowling\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Bob Marley\n",
+      "Vector BoW: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Dr. Seuss\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Douglas Adams\n",
+      "Vector BoW: [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Elie Wiesel\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Friedrich Nietzsche\n",
+      "Vector BoW: [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Mark Twain\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Allen Saunders\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Pablo Neruda\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Ralph Waldo Emerson\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "---\n",
+      "Tác giả: Mother Teresa\n",
+      "Vector BoW: [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Garrison Keillor\n",
+      "Vector BoW: [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Jim Henson\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Dr. Seuss\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: J.K. Rowling\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Bob Marley\n",
+      "Vector BoW: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Dr. Seuss\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: J.K. Rowling\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "---\n",
+      "Tác giả: Bob Marley\n",
+      "Vector BoW: [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Mother Teresa\n",
+      "Vector BoW: [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: J.K. Rowling\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+      "---\n",
+      "Tác giả: Charles M. Schulz\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: William Nicholson\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Albert Einstein\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: Jorge Luis Borges\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "---\n",
+      "Tác giả: George Eliot\n",
+      "Vector BoW: [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "def create_vocabulary(texts):\n",
+    "  \"\"\"\n",
+    "  Tạo từ điển từ một danh sách các văn bản.\n",
+    "\n",
+    "  Args:\n",
+    "    texts: Danh sách các văn bản.\n",
+    "\n",
+    "  Returns:\n",
+    "    Từ điển với key là từ và value là chỉ số duy nhất.\n",
+    "  \"\"\"\n",
+    "  vocabulary = set()\n",
+    "  for text in texts:\n",
+    "    words = re.findall(r'\\w+', text.lower())\n",
+    "    vocabulary.update(words)\n",
+    "  word_to_index = {word: index for index, word in enumerate(vocabulary)}\n",
+    "  return word_to_index\n",
+    "\n",
+    "def create_bow_vector(text, vocabulary):\n",
+    "  \"\"\"\n",
+    "  Tạo vector BoW cho một văn bản.\n",
+    "\n",
+    "  Args:\n",
+    "    text: Văn bản.\n",
+    "    vocabulary: Từ điển.\n",
+    "\n",
+    "  Returns:\n",
+    "    Vector BoW.\n",
+    "  \"\"\"\n",
+    "  words = re.findall(r'\\w+', text.lower())\n",
+    "  word_counts = Counter(words)\n",
+    "  bow_vector = [word_counts.get(word, 0) for word in vocabulary]\n",
+    "  return bow_vector\n",
+    "\n",
+    "# Đọc dữ liệu từ file\n",
+    "with open('Quote.csv', 'r', encoding='utf-8') as f:\n",
+    "  lines = f.readlines()\n",
+    "\n",
+    "# Loại bỏ header\n",
+    "data = lines[1:]\n",
+    "\n",
+    "# Tách dữ liệu thành câu nói, tác giả và vector BoW\n",
+    "quotes = [line.split(',', 5)[4] for line in data]\n",
+    "authors = [line.split(',', 5)[1] for line in data]\n",
+    "\n",
+    "# Tạo từ điển từ danh sách các câu nói\n",
+    "vocabulary = create_vocabulary(quotes)\n",
+    "\n",
+    "# Tạo vector BoW cho mỗi câu nói\n",
+    "bow_vectors = [create_bow_vector(quote, vocabulary) for quote in quotes]\n",
+    "\n",
+    "# In ra 40 câu nói, tác giả và vector BoW tương ứng\n",
+    "for quote, author, bow_vector in zip(quotes[:40], authors[:40], bow_vectors[:40]):\n",
+    "    print(f\"Tác giả: {author}\")\n",
+    "    print(f\"Vector BoW: {bow_vector}\")\n",
+    "    print(\"---\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7dd1f8be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Độ chính xác: 0.5\n",
+      "Tác giả Albert Einstein có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "- Marilyn Monroe: 0.0\n",
+      "Tác giả J.K. Rowling có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "- Marilyn Monroe: 0.0\n",
+      "Tác giả Jane Austen có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Marilyn Monroe: 0.0\n",
+      "Tác giả Marilyn Monroe có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả André Gide có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Thomas A. Edison có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Eleanor Roosevelt có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Steve Martin có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Bob Marley: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả Bob Marley có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Steve Martin: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả Dr. Seuss có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Pablo Neruda: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả Douglas Adams có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Elie Wiesel có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Friedrich Nietzsche có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Mark Twain có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Allen Saunders có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Jorge Luis Borges: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả Pablo Neruda có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Dr. Seuss: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả Ralph Waldo Emerson có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Mother Teresa có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Garrison Keillor có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Jim Henson có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Charles M. Schulz có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả William Nicholson có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n",
+      "Tác giả Jorge Luis Borges có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Allen Saunders: 1\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "Tác giả George Eliot có phong cách nói tương đồng nhất với các tác giả sau:\n",
+      "- Albert Einstein: 0.0\n",
+      "- J.K. Rowling: 0.0\n",
+      "- Jane Austen: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from scipy.spatial.distance import cosine\n",
+    "\n",
+    "# Đọc dữ liệu từ file\n",
+    "with open('Quote.csv', 'r', encoding='utf-8') as f:\n",
+    "  lines = f.readlines()\n",
+    "\n",
+    "# Loại bỏ header\n",
+    "data = lines[1:]\n",
+    "\n",
+    "# Tách dữ liệu thành câu nói, tác giả và vector BoW\n",
+    "quotes = [line.split(',', 5)[4] for line in data]\n",
+    "authors = [line.split(',', 5)[1] for line in data]\n",
+    "bow_vectors = [create_bow_vector(quote, vocabulary) for quote in quotes]\n",
+    "\n",
+    "# Tạo vector TF-IDF\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "tfidf_vectors = tfidf_vectorizer.fit_transform(quotes)\n",
+    "\n",
+    "# Chia dữ liệu thành tập huấn luyện và tập kiểm tra\n",
+    "X_train, X_test, y_train, y_test = train_test_split(tfidf_vectors, authors, test_size=0.2)\n",
+    "\n",
+    "# Huấn luyện mô hình Naive Bayes\n",
+    "model = MultinomialNB()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Dự đoán tên người nổi tiếng theo câu nói\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Đánh giá mô hình\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Độ chính xác: {accuracy}\")\n",
+    "\n",
+    "# Tính độ tương đồng phong cách nói giữa các tác giả\n",
+    "author_similarities = {}\n",
+    "for author1 in authors:\n",
+    "  author_similarities[author1] = {}\n",
+    "  for author2 in authors:\n",
+    "    if author1 != author2:\n",
+    "      author_similarities[author1][author2] = 1 - cosine(tfidf_vectorizer.transform([quotes[authors.index(author1)]]).toarray()[0], tfidf_vectorizer.transform([quotes[authors.index(author2)]]).toarray()[0])\n",
+    "\n",
+    "# In ra các tác giả có phong cách nói tương đồng nhất\n",
+    "for author1, similarities in author_similarities.items():\n",
+    "  sorted_similarities = sorted(similarities.items(), key=lambda item: item[1], reverse=True)\n",
+    "  print(f\"Tác giả {author1} có phong cách nói tương đồng nhất với các tác giả sau:\")\n",
+    "  for author2, similarity in sorted_similarities[:3]:\n",
+    "    print(f\"- {author2}: {similarity}\")"
+   ]
   }
  ],
  "metadata": {
